# poetry-cookiecutter-demo-demo

./: .cruft.json  404.html  README.md  index.html  mkdocs.yaml  pyproject.toml
.github/workflows/: docs.yml
docs/: index.md
search/: search_index.json
